Fix spacing between legs inputs

--- a/traverse-react/public/css/main.css
+++ b/traverse-react/public/css/main.css
@@ -822,6 +822,8 @@ header #signup form div * {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #search-journey #card #search #one-leg input {
